<?xml version="1.0"?>
<package format="2">
  <name>jimmbot_simulation</name>
  <version>0.1.0</version>
  <description>Metapackage for mhRobotics jimmBOT simulation software</description>

  <author email="m.halimi@gmail.com">Mergim Halimi</author>

  <maintainer email="m.halimi@gmail.com">Mergim Halimi</maintainer>

  <url type="website">todo</url>
  <url type="bugtracker">todo</url>
  <url type="repository">todo</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>jimmbot_gazebo</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
